--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="length converter, volume converter, mass converter, meter converter, feet converter , gallon converter, kilogram converter, pound converter">
     <meta name="author" content="Huseyin Kaplan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unit Converter | Landing Page</title>
+    <title>Unit Converter | Home Page</title>
     <!-- main style file  -->
     <link rel="stylesheet" href="./css/stlye.css">
     <!-- favicon -->
