code formatter fix

--- a/index.html
+++ b/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Unit Converter, Convert all the units in one page! ">
-    <meta name="keywords"
-        content="length converter, volume converter, mass converter, meter converter, feet converter , gallon converter, kilogram converter, pound converter">
-    <meta name="author" content="Huseyin Kaplan">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Unit Converter, Convert all the units in one page! "
+    />
+    <meta
+      name="keywords"
+      content="length converter, volume converter, mass converter, meter converter, feet converter , gallon converter, kilogram converter, pound converter"
+    />
+    <meta name="author" content="Huseyin Kaplan" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unit Converter | Home Page</title>
     <!-- main style file  -->
-    <link rel="stylesheet" href="./css/stlye.css">
+    <link rel="stylesheet" href="./css/stlye.css" />
     <!-- favicon -->
-    <link rel="icon" type="image/favicon" href="./image/favicon.png">
-</head>
+    <link rel="icon" type="image/favicon" href="./image/favicon.png" />
+  </head>
 
-<body>
-
+  <body>
     <div class="container">
-        <div class="main-box">
-            <div class="darkMode">
-            </div>
-            <div class="input-section">
-                <h1>Metric/Imperial Unit Conversion</h1>
-                <input placeholder="Enter" id="input" type="number">
-                <button id="convertBtn">Convert</button>
-            </div>
-            <div class="converted-section">
-                <div class="box boxOne">
-                    <h2 id="titleOne">Length (Meter/Feet)</h2>
-                    <p id="paragOne">1 meters = 3.281 feet | 1 feet = 0.304 meters</p>
-                </div>
-                <div class="box boxTwo">
-                    <h2 id="titleTwo"> Volume (Liters/Gallons)</h2>
-                    <p id="paragTwo">1 liters = 0.264 gallons | 1 gallons = 3.785 liters</p>
-                </div>
-                <div class="box boxThree">
-                    <h2 id="titleThree">Mass (Kilograms/Pounds)</h2>
-                    <p id="paragThree">1 kilos = 2.205 pounds | 1 pounds = 0.454 kilos</p>
-                </div>
-            </div>
+      <div class="main-box">
+        <div class="darkMode"></div>
+        <div class="input-section">
+          <h1>Metric/Imperial Unit Conversion</h1>
+          <input placeholder="Enter" id="input" type="number" />
+          <button id="convertBtn">Convert</button>
         </div>
-
-
+        <div class="converted-section">
+          <div class="box boxOne">
+            <h2 id="titleOne">Length (Meter/Feet)</h2>
+            <p id="paragOne">1 meters = 3.281 feet | 1 feet = 0.304 meters</p>
+          </div>
+          <div class="box boxTwo">
+            <h2 id="titleTwo">Volume (Liters/Gallons)</h2>
+            <p id="paragTwo">
+              1 liters = 0.264 gallons | 1 gallons = 3.785 liters
+            </p>
+          </div>
+          <div class="box boxThree">
+            <h2 id="titleThree">Mass (Kilograms/Pounds)</h2>
+            <p id="paragThree">
+              1 kilos = 2.205 pounds | 1 pounds = 0.454 kilos
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
